ParGrammatica.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.6 from ParGrammatica.y
-----------------------------------------------------------------------------

state 22 contains 1 shift/reduce conflicts.
state 27 contains 6 shift/reduce conflicts.
state 28 contains 2 shift/reduce conflicts.
state 29 contains 3 shift/reduce conflicts.
state 31 contains 1 shift/reduce conflicts.
state 67 contains 1 shift/reduce conflicts.
state 101 contains 1 shift/reduce conflicts.
state 121 contains 1 shift/reduce conflicts.
state 130 contains 1 shift/reduce conflicts.
state 138 contains 3 shift/reduce conflicts.
state 139 contains 3 shift/reduce conflicts.
state 180 contains 1 shift/reduce conflicts.

rule 9 is unused
rule 10 is unused
rule 11 is unused
rule 12 is unused
rule 13 is unused
rule 14 is unused
rule 15 is unused
rule 16 is unused

terminal L_WriteInt is unused
terminal L_WriteFloat is unused
terminal L_WriteChar is unused
terminal L_WriteString is unused
terminal L_ReadInt is unused
terminal L_ReadFloat is unused
terminal L_ReadChar is unused
terminal L_ReadString is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pStmt -> Stmt                               (1)
	%start_pRExpr -> RExpr                             (2)
	%start_pLExpr -> LExpr                             (3)
	Ident -> L_Ident                                   (4)
	Char -> L_charac                                   (5)
	Double -> L_doubl                                  (6)
	Integer -> L_integ                                 (7)
	String -> L_quoted                                 (8)
	WriteInt -> L_WriteInt                             (9)
	WriteFloat -> L_WriteFloat                         (10)
	WriteChar -> L_WriteChar                           (11)
	WriteString -> L_WriteString                       (12)
	ReadInt -> L_ReadInt                               (13)
	ReadFloat -> L_ReadFloat                           (14)
	ReadChar -> L_ReadChar                             (15)
	ReadString -> L_ReadString                         (16)
	Boolean -> 'true'                                  (17)
	Boolean -> 'false'                                 (18)
	RExpr -> RExpr1                                    (19)
	RExpr -> RExpr '||' RExpr1                         (20)
	RExpr1 -> RExpr2                                   (21)
	RExpr1 -> RExpr1 '&&' RExpr2                       (22)
	RExpr2 -> RExpr3                                   (23)
	RExpr2 -> '!' RExpr3                               (24)
	RExpr3 -> RExpr4                                   (25)
	RExpr4 -> RExpr5                                   (26)
	RExpr5 -> RExpr6                                   (27)
	RExpr5 -> RExpr6 '==' RExpr6                       (28)
	RExpr5 -> RExpr6 '!=' RExpr6                       (29)
	RExpr5 -> RExpr6 '<' RExpr6                        (30)
	RExpr5 -> RExpr6 '<=' RExpr6                       (31)
	RExpr5 -> RExpr6 '>' RExpr6                        (32)
	RExpr5 -> RExpr6 '>=' RExpr6                       (33)
	RExpr6 -> RExpr7                                   (34)
	RExpr7 -> RExpr8                                   (35)
	RExpr7 -> RExpr7 '+' RExpr8                        (36)
	RExpr7 -> RExpr7 '-' RExpr8                        (37)
	RExpr8 -> RExpr9                                   (38)
	RExpr8 -> RExpr8 '*' RExpr9                        (39)
	RExpr8 -> RExpr8 '/' RExpr9                        (40)
	RExpr8 -> RExpr8 '%' RExpr9                        (41)
	RExpr9 -> RExpr10                                  (42)
	RExpr9 -> RExpr10 '^' RExpr9                       (43)
	RExpr10 -> RExpr11                                 (44)
	RExpr11 -> RExpr12                                 (45)
	RExpr11 -> '-' RExpr12                             (46)
	RExpr11 -> '&' LExpr                               (47)
	RExpr12 -> RExpr13                                 (48)
	RExpr12 -> FunCall                                 (49)
	RExpr13 -> RExpr14                                 (50)
	RExpr13 -> Integer                                 (51)
	RExpr13 -> Char                                    (52)
	RExpr13 -> String                                  (53)
	RExpr13 -> Double                                  (54)
	RExpr13 -> Boolean                                 (55)
	RExpr14 -> '(' RExpr ')'                           (56)
	RExpr14 -> LExpr                                   (57)
	FunCall -> Ident '(' ListRExpr ')'                 (58)
	ListRExpr ->                                       (59)
	ListRExpr -> RExpr                                 (60)
	ListRExpr -> RExpr ',' ListRExpr                   (61)
	LExpr -> LExpr1                                    (62)
	LExpr -> '*' RExpr                                 (63)
	LExpr -> '++' LExpr1                               (64)
	LExpr -> '--' LExpr1                               (65)
	LExpr1 -> LExpr2                                   (66)
	LExpr1 -> LExpr2 '++'                              (67)
	LExpr1 -> LExpr2 '--'                              (68)
	LExpr2 -> '(' LExpr ')'                            (69)
	LExpr2 -> BLExpr                                   (70)
	BLExpr -> BLExpr '[' RExpr ']'                     (71)
	BLExpr -> Ident                                    (72)
	Program -> ListDecl                                (73)
	ListDecl ->                                        (74)
	ListDecl -> Decl ListDecl                          (75)
	Decl -> BasicType ListVarDeclInit ';'              (76)
	Decl -> TypeSpec ListVarDeclInit ';'               (77)
	Decl -> BasicType Ident '(' ListParameter ')' CompStmt   (78)
	ListVarDeclInit -> VarDeclInit                     (79)
	ListVarDeclInit -> VarDeclInit ',' ListVarDeclInit   (80)
	TypeSpec -> BasicType                              (81)
	TypeSpec -> CompoundType                           (82)
	BasicType -> 'bool'                                (83)
	BasicType -> 'char'                                (84)
	BasicType -> 'float'                               (85)
	BasicType -> 'int'                                 (86)
	CompoundType -> TypeSpec '[' Integer ']'           (87)
	CompoundType -> TypeSpec '[' ']'                   (88)
	CompoundType -> TypeSpec '*'                       (89)
	VarDeclInit -> Ident '=' ComplexRExpr              (90)
	ComplexRExpr -> RExpr                              (91)
	ComplexRExpr -> '[' ListComplexRExpr ']'           (92)
	ListComplexRExpr -> ComplexRExpr                   (93)
	ListComplexRExpr -> ComplexRExpr ',' ListComplexRExpr   (94)
	ListParameter ->                                   (95)
	ListParameter -> Parameter                         (96)
	ListParameter -> Parameter ',' ListParameter       (97)
	Parameter -> TypeSpec Ident                        (98)
	CompStmt -> CompStmtNocolon ';'                    (99)
	CompStmt -> CompStmtNocolon                        (100)
	CompStmtNocolon -> '{' ListDecl ListStmt '}'       (101)
	ListStmt ->                                        (102)
	ListStmt -> Stmt ListStmt                          (103)
	Stmt -> CompStmt                                   (104)
	Stmt -> FunCall ';'                                (105)
	Stmt -> JumpStmt ';'                               (106)
	Stmt -> IterStmt                                   (107)
	Stmt -> SelectionStmt                              (108)
	Stmt -> LExpr Assignment_op RExpr ';'              (109)
	Stmt -> LExpr ';'                                  (110)
	Assignment_op -> '='                               (111)
	Assignment_op -> '*='                              (112)
	Assignment_op -> '+='                              (113)
	Assignment_op -> '/='                              (114)
	Assignment_op -> '-='                              (115)
	Assignment_op -> '^='                              (116)
	Assignment_op -> '&='                              (117)
	Assignment_op -> '|='                              (118)
	JumpStmt -> 'break'                                (119)
	JumpStmt -> 'continue'                             (120)
	JumpStmt -> 'return'                               (121)
	JumpStmt -> 'return' '(' RExpr ')'                 (122)
	SelectionStmt -> 'if' '(' RExpr ')' Stmt           (123)
	SelectionStmt -> 'if' '(' RExpr ')' Stmt 'else' Stmt   (124)
	IterStmt -> 'while' '(' RExpr ')' Stmt             (125)
	IterStmt -> 'do' Stmt 'while' '(' RExpr ')' ';'    (126)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'&='           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	'/='           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'['            { PT _ (TS _ 27) }
	']'            { PT _ (TS _ 28) }
	'^'            { PT _ (TS _ 29) }
	'^='           { PT _ (TS _ 30) }
	'bool'         { PT _ (TS _ 31) }
	'break'        { PT _ (TS _ 32) }
	'char'         { PT _ (TS _ 33) }
	'continue'     { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'else'         { PT _ (TS _ 36) }
	'false'        { PT _ (TS _ 37) }
	'float'        { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'int'          { PT _ (TS _ 40) }
	'return'       { PT _ (TS _ 41) }
	'true'         { PT _ (TS _ 42) }
	'while'        { PT _ (TS _ 43) }
	'{'            { PT _ (TS _ 44) }
	'|='           { PT _ (TS _ 45) }
	'||'           { PT _ (TS _ 46) }
	'}'            { PT _ (TS _ 47) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_WriteInt     { PT _ (T_WriteInt $$) }
	L_WriteFloat   { PT _ (T_WriteFloat $$) }
	L_WriteChar    { PT _ (T_WriteChar $$) }
	L_WriteString  { PT _ (T_WriteString $$) }
	L_ReadInt      { PT _ (T_ReadInt $$) }
	L_ReadFloat    { PT _ (T_ReadFloat $$) }
	L_ReadChar     { PT _ (T_ReadChar $$) }
	L_ReadString   { PT _ (T_ReadString $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pStmt    rule  1
	%start_pRExpr   rule  2
	%start_pLExpr   rule  3
	Ident           rule  4
	Char            rule  5
	Double          rule  6
	Integer         rule  7
	String          rule  8
	WriteInt        rule  9
	WriteFloat      rule  10
	WriteChar       rule  11
	WriteString     rule  12
	ReadInt         rule  13
	ReadFloat       rule  14
	ReadChar        rule  15
	ReadString      rule  16
	Boolean         rules 17, 18
	RExpr           rules 19, 20
	RExpr1          rules 21, 22
	RExpr2          rules 23, 24
	RExpr3          rule  25
	RExpr4          rule  26
	RExpr5          rules 27, 28, 29, 30, 31, 32, 33
	RExpr6          rule  34
	RExpr7          rules 35, 36, 37
	RExpr8          rules 38, 39, 40, 41
	RExpr9          rules 42, 43
	RExpr10         rule  44
	RExpr11         rules 45, 46, 47
	RExpr12         rules 48, 49
	RExpr13         rules 50, 51, 52, 53, 54, 55
	RExpr14         rules 56, 57
	FunCall         rule  58
	ListRExpr       rules 59, 60, 61
	LExpr           rules 62, 63, 64, 65
	LExpr1          rules 66, 67, 68
	LExpr2          rules 69, 70
	BLExpr          rules 71, 72
	Program         rule  73
	ListDecl        rules 74, 75
	Decl            rules 76, 77, 78
	ListVarDeclInit rules 79, 80
	TypeSpec        rules 81, 82
	BasicType       rules 83, 84, 85, 86
	CompoundType    rules 87, 88, 89
	VarDeclInit     rule  90
	ComplexRExpr    rules 91, 92
	ListComplexRExpr rules 93, 94
	ListParameter   rules 95, 96, 97
	Parameter       rule  98
	CompStmt        rules 99, 100
	CompStmtNocolon rule  101
	ListStmt        rules 102, 103
	Stmt            rules 104, 105, 106, 107, 108, 109, 110
	Assignment_op   rules 111, 112, 113, 114, 115, 116, 117, 118
	JumpStmt        rules 119, 120, 121, 122
	SelectionStmt   rules 123, 124
	IterStmt        rules 125, 126

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 69
	'char'         shift, and enter state 70
	'float'        shift, and enter state 71
	'int'          shift, and enter state 72
	%eof           reduce using rule 74

	Program        goto state 63
	ListDecl       goto state 64
	Decl           goto state 65
	TypeSpec       goto state 66
	BasicType      goto state 67
	CompoundType   goto state 68

State 1

	%start_pStmt -> . Stmt                              (rule 1)

	'('            shift, and enter state 11
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'--'           shift, and enter state 14
	'break'        shift, and enter state 56
	'continue'     shift, and enter state 57
	'do'           shift, and enter state 58
	'if'           shift, and enter state 59
	'return'       shift, and enter state 60
	'while'        shift, and enter state 61
	'{'            shift, and enter state 62
	L_Ident        shift, and enter state 5

	Ident          goto state 15
	FunCall        goto state 48
	LExpr          goto state 49
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10
	CompStmt       goto state 50
	CompStmtNocolongoto state 51
	Stmt           goto state 52
	JumpStmt       goto state 53
	SelectionStmt  goto state 54
	IterStmt       goto state 55

State 2

	%start_pRExpr -> . RExpr                            (rule 2)

	'!'            shift, and enter state 38
	'&'            shift, and enter state 39
	'('            shift, and enter state 40
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 41
	'--'           shift, and enter state 14
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 5
	L_charac       shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47

	Ident          goto state 15
	Char           goto state 16
	Double         goto state 17
	Integer        goto state 18
	String         goto state 19
	Boolean        goto state 20
	RExpr          goto state 21
	RExpr1         goto state 22
	RExpr2         goto state 23
	RExpr3         goto state 24
	RExpr4         goto state 25
	RExpr5         goto state 26
	RExpr6         goto state 27
	RExpr7         goto state 28
	RExpr8         goto state 29
	RExpr9         goto state 30
	RExpr10        goto state 31
	RExpr11        goto state 32
	RExpr12        goto state 33
	RExpr13        goto state 34
	RExpr14        goto state 35
	FunCall        goto state 36
	LExpr          goto state 37
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 3

	%start_pLExpr -> . LExpr                            (rule 3)

	'('            shift, and enter state 11
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'--'           shift, and enter state 14
	L_Ident        shift, and enter state 5

	Ident          goto state 6
	LExpr          goto state 7
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 4

	Ident -> . L_Ident                                  (rule 4)

	L_Ident        shift, and enter state 5


State 5

	Ident -> L_Ident .                                  (rule 4)

	'!='           reduce using rule 4
	'%'            reduce using rule 4
	'&&'           reduce using rule 4
	'&='           reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'*='           reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	'+='           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'--'           reduce using rule 4
	'-='           reduce using rule 4
	'/'            reduce using rule 4
	'/='           reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'^'            reduce using rule 4
	'^='           reduce using rule 4
	'|='           reduce using rule 4
	'||'           reduce using rule 4
	%eof           reduce using rule 4


State 6

	BLExpr -> Ident .                                   (rule 72)

	'!='           reduce using rule 72
	'%'            reduce using rule 72
	'&&'           reduce using rule 72
	'&='           reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'*='           reduce using rule 72
	'+'            reduce using rule 72
	'++'           reduce using rule 72
	'+='           reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'--'           reduce using rule 72
	'-='           reduce using rule 72
	'/'            reduce using rule 72
	'/='           reduce using rule 72
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'='            reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	'['            reduce using rule 72
	']'            reduce using rule 72
	'^'            reduce using rule 72
	'^='           reduce using rule 72
	'|='           reduce using rule 72
	'||'           reduce using rule 72
	%eof           reduce using rule 72


State 7

	%start_pLExpr -> LExpr .                            (rule 3)

	%eof           accept


State 8

	LExpr -> LExpr1 .                                   (rule 62)

	'!='           reduce using rule 62
	'%'            reduce using rule 62
	'&&'           reduce using rule 62
	'&='           reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'*='           reduce using rule 62
	'+'            reduce using rule 62
	'+='           reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'-='           reduce using rule 62
	'/'            reduce using rule 62
	'/='           reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'='            reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	']'            reduce using rule 62
	'^'            reduce using rule 62
	'^='           reduce using rule 62
	'|='           reduce using rule 62
	'||'           reduce using rule 62
	%eof           reduce using rule 62


State 9

	LExpr1 -> LExpr2 .                                  (rule 66)
	LExpr1 -> LExpr2 . '++'                             (rule 67)
	LExpr1 -> LExpr2 . '--'                             (rule 68)

	'!='           reduce using rule 66
	'%'            reduce using rule 66
	'&&'           reduce using rule 66
	'&='           reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'*='           reduce using rule 66
	'+'            reduce using rule 66
	'++'           shift, and enter state 124
	'+='           reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'--'           shift, and enter state 125
	'-='           reduce using rule 66
	'/'            reduce using rule 66
	'/='           reduce using rule 66
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'='            reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	']'            reduce using rule 66
	'^'            reduce using rule 66
	'^='           reduce using rule 66
	'|='           reduce using rule 66
	'||'           reduce using rule 66
	%eof           reduce using rule 66


State 10

	LExpr2 -> BLExpr .                                  (rule 70)
	BLExpr -> BLExpr . '[' RExpr ']'                    (rule 71)

	'!='           reduce using rule 70
	'%'            reduce using rule 70
	'&&'           reduce using rule 70
	'&='           reduce using rule 70
	')'            reduce using rule 70
	'*'            reduce using rule 70
	'*='           reduce using rule 70
	'+'            reduce using rule 70
	'++'           reduce using rule 70
	'+='           reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'--'           reduce using rule 70
	'-='           reduce using rule 70
	'/'            reduce using rule 70
	'/='           reduce using rule 70
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'='            reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	'['            shift, and enter state 123
	']'            reduce using rule 70
	'^'            reduce using rule 70
	'^='           reduce using rule 70
	'|='           reduce using rule 70
	'||'           reduce using rule 70
	%eof           reduce using rule 70


State 11

	LExpr2 -> '(' . LExpr ')'                           (rule 69)

	'('            shift, and enter state 11
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'--'           shift, and enter state 14
	L_Ident        shift, and enter state 5

	Ident          goto state 6
	LExpr          goto state 122
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 12

	LExpr -> '*' . RExpr                                (rule 63)

	'!'            shift, and enter state 38
	'&'            shift, and enter state 39
	'('            shift, and enter state 40
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 41
	'--'           shift, and enter state 14
	'false'        shift, and enter state 42
	'true'         shift, and enter state 43
	L_Ident        shift, and enter state 5
	L_charac       shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47

	Ident          goto state 15
	Char           goto state 16
	Double         goto state 17
	Integer        goto state 18
	String         goto state 19
	Boolean        goto state 20
	RExpr          goto state 121
	RExpr1         goto state 22
	RExpr2         goto state 23
	RExpr3         goto state 24
	RExpr4         goto state 25
	RExpr5         goto state 26
	RExpr6         goto state 27
	RExpr7         goto state 28
	RExpr8         goto state 29
	RExpr9         goto state 30
	RExpr10        goto state 31
	RExpr11        goto state 32
	RExpr12        goto state 33
	RExpr13        goto state 34
	RExpr14        goto state 35
	FunCall        goto state 36
	LExpr          goto state 37
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 13

	LExpr -> '++' . LExpr1                              (rule 64)

	'('            shift, and enter state 11
	L_Ident        shift, and enter state 5

	Ident          goto state 6
	LExpr1         goto state 120
	LExpr2         goto state 9
	BLExpr         goto state 10

State 14

	LExpr -> '--' . LExpr1                              (rule 65)

	'('            shift, and enter state 11
	L_Ident        shift, and enter state 5

	Ident          goto state 6
	LExpr1         goto state 119
	LExpr2         goto state 9
	BLExpr         goto state 10

State 15

	FunCall -> Ident . '(' ListRExpr ')'                (rule 58)
	BLExpr -> Ident .                                   (rule 72)

	'!='           reduce using rule 72
	'%'            reduce using rule 72
	'&&'           reduce using rule 72
	'&='           reduce using rule 72
	'('            shift, and enter state 118
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'*='           reduce using rule 72
	'+'            reduce using rule 72
	'++'           reduce using rule 72
	'+='           reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'--'           reduce using rule 72
	'-='           reduce using rule 72
	'/'            reduce using rule 72
	'/='           reduce using rule 72
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'='            reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	'['            reduce using rule 72
	']'            reduce using rule 72
	'^'            reduce using rule 72
	'^='           reduce using rule 72
	'|='           reduce using rule 72
	'||'           reduce using rule 72
	%eof           reduce using rule 72


State 16

	RExpr13 -> Char .                                   (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	'&='           reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'*='           reduce using rule 52
	'+'            reduce using rule 52
	'+='           reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'-='           reduce using rule 52
	'/'            reduce using rule 52
	'/='           reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'='            reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'^'            reduce using rule 52
	'^='           reduce using rule 52
	'|='           reduce using rule 52
	'||'           reduce using rule 52
	%eof           reduce using rule 52


State 17

	RExpr13 -> Double .                                 (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	'&='           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'*='           reduce using rule 54
	'+'            reduce using rule 54
	'+='           reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'-='           reduce using rule 54
	'/'            reduce using rule 54
	'/='           reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'='            reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'^'            reduce using rule 54
	'^='           reduce using rule 54
	'|='           reduce using rule 54
	'||'           reduce using rule 54
	%eof           reduce using rule 54


State 18

	RExpr13 -> Integer .                                (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	'&='           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'*='           reduce using rule 51
	'+'            reduce using rule 51
	'+='           reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'-='           reduce using rule 51
	'/'            reduce using rule 51
	'/='           reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'='            reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	']'            reduce using rule 51
	'^'            reduce using rule 51
	'^='           reduce using rule 51
	'|='           reduce using rule 51
	'||'           reduce using rule 51
	%eof           reduce using rule 51


State 19

	RExpr13 -> String .                                 (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'&='           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'*='           reduce using rule 53
	'+'            reduce using rule 53
	'+='           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'-='           reduce using rule 53
	'/'            reduce using rule 53
	'/='           reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'='            reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	']'            reduce using rule 53
	'^'            reduce using rule 53
	'^='           reduce using rule 53
	'|='           reduce using rule 53
	'||'           reduce using rule 53
	%eof           reduce using rule 53


State 20

	RExpr13 -> Boolean .                                (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'&='           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'*='           reduce using rule 55
	'+'            reduce using rule 55
	'+='           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'-='           reduce using rule 55
	'/'            reduce using rule 55
	'/='           reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'='            reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'^'            reduce using rule 55
	'^='           reduce using rule 55
	'|='           reduce using rule 55
	'||'           reduce using rule 55
	%eof           reduce using rule 55


State 21

	%start_pRExpr -> RExpr .                            (rule 2)
	RExpr -> RExpr . '||' RExpr1                        (rule 20)

	'||'           shift, and enter state 117
	%eof           accept


State 22

	RExpr -> RExpr1 .                                   (rule 19)
	RExpr1 -> RExpr1 . '&&' RExpr2                      (rule 22)

	'!='           reduce using rule 19
	'%'            reduce using rule 19
	'&&'           shift, and enter state 116
			(reduce using rule 19)

	'&='           reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'*='           reduce using rule 19
	'+'            reduce using rule 19
	'+='           reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'-='           reduce using rule 19
	'/'            reduce using rule 19
	'/='           reduce using rule 19
	';'            reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'='            reduce using rule 19
	'=='           reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	']'            reduce using rule 19
	'^'            reduce using rule 19
	'^='           reduce using rule 19
	'|='           reduce using rule 19
	'||'           reduce using rule 19
	%eof           reduce using rule 19


State 23

	RExpr1 -> RExpr2 .                                  (rule 21)

	'!='           reduce using rule 21
	'%'            reduce using rule 21
	'&&'           reduce using rule 21
	'&='           reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'*='           reduce using rule 21
	'+'            reduce using rule 21
	'+='           reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'-='           reduce using rule 21
	'/'            reduce using rule 21
	'/='           reduce using rule 21
	';'            reduce using rule 21
	'<'            reduce using rule 21
	'<='           reduce using rule 21
	'='            reduce using rule 21
	'=='           reduce using rule 21
	'>'            reduce using rule 21
	'>='           reduce using rule 21
	']'            reduce using rule 21
	'^'            reduce using rule 21
	'^='           reduce using rule 21
	'|='           reduce using rule 21
	'||'           reduce using rule 21
	%eof           reduce using rule 21


State 24

	RExpr2 -> RExpr3 .                                  (rule 23)

	'!='           reduce using rule 23
	'%'            reduce using rule 23
	'&&'           reduce using rule 23
	'&='           reduce using rule 23
	')'            reduce using rule 23
	'*'            reduce using rule 23
	'*='           reduce using rule 23
	'+'            reduce using rule 23
	'+='           reduce using rule 23
	','            reduce using rule 23
	'-'            reduce using rule 23
	'-='           reduce using rule 23
	'/'            reduce using rule 23
	'/='           reduce using rule 23
	';'            reduce using rule 23
	'<'            reduce using rule 23
	'<='           reduce using rule 23
	'='            reduce using rule 23
	'=='           reduce using rule 23
	'>'            reduce using rule 23
	'>='           reduce using rule 23
	']'            reduce using rule 23
	'^'            reduce using rule 23
	'^='           reduce using rule 23
	'|='           reduce using rule 23
	'||'           reduce using rule 23
	%eof           reduce using rule 23


State 25

	RExpr3 -> RExpr4 .                                  (rule 25)

	'!='           reduce using rule 25
	'%'            reduce using rule 25
	'&&'           reduce using rule 25
	'&='           reduce using rule 25
	')'            reduce using rule 25
	'*'            reduce using rule 25
	'*='           reduce using rule 25
	'+'            reduce using rule 25
	'+='           reduce using rule 25
	','            reduce using rule 25
	'-'            reduce using rule 25
	'-='           reduce using rule 25
	'/'            reduce using rule 25
	'/='           reduce using rule 25
	';'            reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'='            reduce using rule 25
	'=='           reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	']'            reduce using rule 25
	'^'            reduce using rule 25
	'^='           reduce using rule 25
	'|='           reduce using rule 25
	'||'           reduce using rule 25
	%eof           reduce using rule 25


State 26

	RExpr4 -> RExpr5 .                                  (rule 26)

	'!='           reduce using rule 26
	'%'            reduce using rule 26
	'&&'           reduce using rule 26
	'&='           reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'*='           reduce using rule 26
	'+'            reduce using rule 26
	'+='           reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'-='           reduce using rule 26
	'/'            reduce using rule 26
	'/='           reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'='            reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
